# 3p-uriparser

./: .gitignore  .hgignore  README.txt  autobuild.xml  build-cmd.sh  clean.bat
uriparser/: CMakeLists.txt  Makefile.in  autogen.sh  configure  configure.ac  uriparser.pc  uriparser.pc.cmakein
uriparser/contrib/vstudio/vc10/: uriparser.rc  uriparser.sln  uriparser.vcxproj  uriparser.vcxproj.filters
uriparser/doc/: Makefile.in  preprocess.sh  release.sh.in
uriparser/scripts/: edit_version.sh  fix_svn_props.sh  release.sh  rewrite_checksums.sh  tag_trunk.sh
uriparser/src/: UriCommon.c
